src/test/ui/span/visibility-ty-params.stderr
error: unexpected generic arguments in path
  --> $DIR/visibility-ty-params.rs:6:5
   |
LL | m!{ S<u8> }
   |     ^^^^^

error[E0577]: expected module, found struct `S`
  --> $DIR/visibility-ty-params.rs:6:5
   |
LL | m!{ S<u8> }
   |     ^^^^^ not a module

error: unexpected generic arguments in path
  --> $DIR/visibility-ty-params.rs:10:9
   |
LL |     m!{ m<> }
   |         ^^^

error: aborting due to 3 previous errors

